3.3.4/_sources/gallery/user_interfaces/embedding_in_wx2_sgskip.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/user_interfaces/embedding_in_wx2_sgskip.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_user_interfaces_embedding_in_wx2_sgskip.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_user_interfaces_embedding_in_wx2_sgskip.py:


==================
Embedding in wx #2
==================

An example of how to use wxagg in an application with the new
toolbar - comment out the add_toolbar line for no toolbar.

.. GENERATED FROM PYTHON SOURCE LINES 9-66

.. code-block:: default


    from matplotlib.backends.backend_wxagg import (
        FigureCanvasWxAgg as FigureCanvas,
        NavigationToolbar2WxAgg as NavigationToolbar)
    from matplotlib.figure import Figure

    import numpy as np

    import wx
    import wx.lib.mixins.inspection as WIT


    class CanvasFrame(wx.Frame):
        def __init__(self):
            wx.Frame.__init__(self, None, -1,
                              'CanvasFrame', size=(550, 350))

            self.figure = Figure()
            self.axes = self.figure.add_subplot(111)
            t = np.arange(0.0, 3.0, 0.01)
            s = np.sin(2 * np.pi * t)

            self.axes.plot(t, s)
            self.canvas = FigureCanvas(self, -1, self.figure)

            self.sizer = wx.BoxSizer(wx.VERTICAL)
            self.sizer.Add(self.canvas, 1, wx.LEFT | wx.TOP | wx.EXPAND)
            self.SetSizer(self.sizer)
            self.Fit()

            self.add_toolbar()  # comment this out for no toolbar

        def add_toolbar(self):
            self.toolbar = NavigationToolbar(self.canvas)
            self.toolbar.Realize()
            # By adding toolbar in sizer, we are able to put it at the bottom
            # of the frame - so appearance is closer to GTK version.
            self.sizer.Add(self.toolbar, 0, wx.LEFT | wx.EXPAND)
            # update the axes menu on the toolbar
            self.toolbar.update()


    # alternatively you could use
    #class App(wx.App):
    class App(WIT.InspectableApp):
        def OnInit(self):
            """Create the main window and insert the custom frame."""
            self.Init()
            frame = CanvasFrame()
            frame.Show(True)

            return True


    if __name__ == "__main__":
        app = App()
        app.MainLoop()


.. _sphx_glr_download_gallery_user_interfaces_embedding_in_wx2_sgskip.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: embedding_in_wx2_sgskip.py <embedding_in_wx2_sgskip.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: embedding_in_wx2_sgskip.ipynb <embedding_in_wx2_sgskip.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
